--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Flower/vendor/GLFW"]
 	path = Flower/vendor/GLFW
 	url = https://github.com/MrBlueBlobGuy/GLFW
+[submodule "Flower/vendor/glm"]
+	path = Flower/vendor/glm
+	url = https://github.com/g-truc/glm.git
