--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Flower/vendor/glm"]
 	path = Flower/vendor/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "Flower/vendor/NumCpp"]
+	path = Flower/vendor/NumCpp
+	url = https://github.com/dpilger26/NumCpp.git
